logs/Slang/chapter-7/queues/push_back_assign.sv.log
name: push_back_assign
description: Update queue by assignment (push_back)
should_fail: 0
tags: 7.10.4
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/queues/push_back_assign.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/queues/push_back_assign.sv:9:6: error: dimension requires a constant range
int q[$];
     ^~~
